updated button positions to avoid overlap

--- a/src/components/MultiSiteLineChart/MultiSiteLineChart.module.css
+++ b/src/components/MultiSiteLineChart/MultiSiteLineChart.module.css
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-
+  flex-direction: column;
   gap: 2px;
   opacity: 0.9;
 
@@ -34,7 +34,7 @@
 
 .smallButtonPosition {
   font-size: 12px;
-  padding: 0 8px;
+  padding: 0 3px;
 }
 
 .downloadIcon {
